Added test cases and comments
